--- a/src/components/navigator/NavigatorView.scss
+++ b/src/components/navigator/NavigatorView.scss
@@ -87,13 +87,15 @@
 }
 
 .nitro-room-info {
-    background: #3D3D3D;
     color: #FFFFFF;
     position: fixed;
     bottom: 55px;
     left: 90px;
     width: $room-info-width;
 
+    .nitro-room-info-content{
+        background: #3D3D3D;
+    }
     .btn-primary {
         background-color: #3D3D3D;
         border: 1px white solid;
